k8s/volume-snapshots/volume-snapshots-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volume-snapshots
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
